Collection postman et swagger qui fonctionne
